Closed
Bug 1457120
Opened 4 years ago
Closed 4 years ago
[Wayland] build error: ‘FontSlantStyle’/FontStretch has not been declared
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
mozilla61
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox59 | --- | unaffected |
firefox60 | --- | unaffected |
firefox61 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
Details
(Keywords: regression)
Attachments
(1 file)
After Bug 1436048 land it can't be build Gtk+/Wayland backend: 0:27.87 In file included from /home/komat/tmp676-trunk-gtk3/src2/objdir/widget/gtk/Unified_cpp_widget_gtk2.cpp:11: 0:27.87 /home/komat/tmp676-trunk-gtk3/src2/widget/gtk/nsLookAndFeel.cpp: In function ‘void GetSystemFontInfo(GtkStyleContext*, nsString*, gfxFontStyle*)’: 0:27.87 /home/komat/tmp676-trunk-gtk3/src2/widget/gtk/nsLookAndFeel.cpp:712:25: error: ‘FontSlantStyle’ has not been declared 0:27.87 aFontStyle->style = FontSlantStyle::Normal(); 0:27.87 ^~~~~~~~~~~~~~ 0:27.87 /home/komat/tmp676-trunk-gtk3/src2/widget/gtk/nsLookAndFeel.cpp:730:27: error: ‘FontStretch’ has not been declared 0:27.87 aFontStyle->stretch = FontStretch::Normal(); 0:27.87 ^~~~~~~~~~~
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → stransky
Assignee | ||
Comment 1•4 years ago
|
||
we're missing mozilla:: namespace here.
Comment hidden (mozreview-request) |
![]() |
||
Comment 3•4 years ago
|
||
Probably cleaner to put a 'using' statement at the top of the file.
Comment hidden (mozreview-request) |
Assignee | ||
Comment 5•4 years ago
|
||
(In reply to Jonathan Watt [:jwatt] from comment #3) > Probably cleaner to put a 'using' statement at the top of the file. Updated, Thanks.
Comment 6•4 years ago
|
||
mozreview-review |
Comment on attachment 8971203 [details] Bug 1457120 - Use mozilla:: namespace at nsLookAndFeel module, https://reviewboard.mozilla.org/r/239990/#review245758
Attachment #8971203 -
Flags: review?(jhorak) → review+
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/50355ef2f138 Use mozilla:: namespace at nsLookAndFeel module, r=jhorak
Comment 8•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/50355ef2f138
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
![]() |
||
Comment 9•4 years ago
|
||
Thanks for fixing this!
Updated•4 years ago
|
status-firefox59:
--- → unaffected
status-firefox60:
--- → unaffected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•