Bug 1457120 - Use mozilla:: namespace at nsLookAndFeel module, r=jhorak

MozReview-Commit-ID: BXZzDAiY0e4